--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -1,10 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_base"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
+    android:orientation="vertical"
     tools:context="com.tianyigps.xiepeng.base.BaseActivity">
 
-</RelativeLayout>
+    <FrameLayout
+        android:id="@+id/fl_activity_base_title"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_64"
+        android:clipToPadding="true"
+        android:fitsSystemWindows="true"
+        android:background="@color/material_light_blue_a700">
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/fl_activity_base_content"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+    </FrameLayout>
+
+</LinearLayout>
