--- a/app/src/main/res/layout/activity_worker_fragment_content.xml
+++ b/app/src/main/res/layout/activity_worker_fragment_content.xml
@@ -4,17 +4,19 @@
     android:id="@+id/activity_worker_fragment_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg_content"
     android:orientation="vertical"
     tools:context="com.tianyigps.xiepeng.activity.WorkerFragmentContentActivity">
-    
-    <ListView
+
+    <FrameLayout
+        android:id="@+id/fl_activity_worker_content"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
-    </ListView>
+        android:layout_weight="1"/>
 
-    <include layout="@layout/layout_worker_fragment_content_bottom"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"/>
+    <include
+        layout="@layout/layout_worker_fragment_content_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
