--- a/app/src/main/res/layout/layout_worker_fragment_content_bottom.xml
+++ b/app/src/main/res/layout/layout_worker_fragment_content_bottom.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <View
         android:layout_width="match_parent"
         android:layout_height="0.1dp"
-        android:background="@color/color_cut_line"/>
+        android:background="@color/color_cut_line" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="54dp"
@@ -15,7 +17,7 @@
 
         <LinearLayout
 
-            android:id="@+id/ll_orders_task"
+            android:id="@+id/ll_fragment_content_bottom_order"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -23,27 +25,25 @@
             android:orientation="vertical"
             android:padding="3dp">
 
-
             <ImageView
-                android:id="@+id/iv_orders_task"
+                android:id="@+id/iv_fragment_content_bottom_order"
                 android:layout_width="@dimen/dp_24"
                 android:layout_height="@dimen/dp_24"
                 android:layout_gravity="center"
                 android:background="@drawable/ic_tab_task" />
 
             <TextView
-                android:id="@+id/tv_orders_task"
+                android:id="@+id/tv_fragment_content_bottom_order"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_2"
                 android:layout_gravity="center"
-                android:text="订单任务"
+                android:layout_marginTop="@dimen/dp_2"
+                android:text="@string/order_task"
                 android:textSize="12sp" />
         </LinearLayout>
 
         <LinearLayout
-
-            android:id="@+id/ll_tasking"
+            android:id="@+id/ll_fragment_content_bottom_handling"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -51,27 +51,25 @@
             android:orientation="vertical"
             android:padding="3dp">
 
-
             <ImageView
-                android:id="@+id/iv_tasking"
+                android:id="@+id/iv_fragment_content_bottom_handling"
                 android:layout_width="@dimen/dp_24"
                 android:layout_height="@dimen/dp_24"
                 android:layout_gravity="center"
                 android:background="@drawable/ic_tab_doing" />
 
             <TextView
-                android:id="@+id/tv_tasking"
+                android:id="@+id/tv_fragment_content_bottom_handling"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/dp_2"
-                android:text="进行中"
+                android:text="@string/handling"
                 android:textSize="12sp" />
         </LinearLayout>
 
         <LinearLayout
-
-            android:id="@+id/ll_history_task"
+            android:id="@+id/ll_fragment_content_bottom_history"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -79,50 +77,48 @@
             android:orientation="vertical"
             android:padding="3dp">
 
-
             <ImageView
-                android:id="@+id/iv_history_task"
+                android:id="@+id/iv_fragment_content_bottom_history"
                 android:layout_width="@dimen/dp_24"
                 android:layout_height="@dimen/dp_24"
                 android:layout_gravity="center"
-                android:background="@drawable/ic_tab_yichuli" />
+                android:background="@drawable/ic_tab_history" />
 
             <TextView
-                android:id="@+id/tv_history_task"
+                android:id="@+id/tv_fragment_content_bottom_history"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/dp_2"
-                android:text="历史订单"
+                android:text="@string/history_order"
                 android:textSize="12sp" />
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/ll_mine"
+            android:id="@+id/ll_fragment_content_bottom_mine"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center_vertical"
             android:layout_weight="1"
+            android:gravity="center_vertical"
             android:orientation="vertical"
             android:padding="3dp">
 
             <ImageView
-                android:id="@+id/iv_mine"
+                android:id="@+id/iv_fragment_content_bottom_mine"
                 android:layout_width="@dimen/dp_24"
                 android:layout_height="@dimen/dp_24"
                 android:layout_gravity="center"
                 android:background="@drawable/ic_tab_mine" />
 
             <TextView
-                android:id="@+id/tv_mine"
+                android:id="@+id/tv_fragment_content_bottom_mine"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_2"
                 android:layout_gravity="center"
-                android:text="我的"
-                android:textSize="12sp"/>
+                android:layout_marginTop="@dimen/dp_2"
+                android:text="@string/mine"
+                android:textSize="12sp" />
         </LinearLayout>
-
 
     </LinearLayout>
 
