--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,9 @@
     <color name="colorText">#656b81</color>
     <color name="colorTextSelect">#3cabfa</color>
     <color name="colorLine">#c9c9c9</color>
+
+    <color name="colorAlphaBlue">#a80091ea</color>
+
     <color name="material_green_300">#42bd41</color>
     <color name="material_light_blue_a700">#0091ea</color>
     <color name="material_light_blue_a100">#80d8ff</color>
