--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,8 +11,14 @@
     <dimen name="dp_20">20dp</dimen>
     <dimen name="dp_24">24dp</dimen>
     <dimen name="dp_32">32dp</dimen>
+    <dimen name="dp_40">40dp</dimen>
     <dimen name="dp_48">48dp</dimen>
     <dimen name="dp_64">64dp</dimen>
+    <dimen name="dp_72">72dp</dimen>
+
+    <dimen name="dp_96">96dp</dimen>
+
+    <dimen name="dp_240">240dp</dimen>
 
 
     <!--字体-->
