--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -20,35 +20,36 @@
             android:id="@+id/iv_activity_base_left"
             android:layout_width="@dimen/dp_48"
             android:layout_height="@dimen/dp_48"
-            android:layout_marginBottom="@dimen/dp_4"
-            android:padding="@dimen/dp_2"
-            android:src="@color/colorAccent"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="@dimen/dp_4"
+            android:padding="@dimen/dp_2"
+            android:src="@color/colorAccent" />
 
         <ImageView
             android:id="@+id/iv_activity_base_right"
             android:layout_width="@dimen/dp_48"
             android:layout_height="@dimen/dp_48"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="@dimen/dp_4"
             android:baselineAlignBottom="true"
             android:padding="@dimen/dp_2"
-            android:layout_marginBottom="@dimen/dp_4"
             android:src="@color/colorAccent"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/tv_activity_base_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/app_name"
-            android:textColor="@color/colorWhite"
-            android:textSize="@dimen/sp_18"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="11dp" />
+            android:layout_marginBottom="11dp"
+            android:text="@string/app_name"
+            android:textColor="@color/colorWhite"
+            android:textSize="@dimen/sp_18" />
 
     </RelativeLayout>
 
