--- a/app/src/main/res/layout/layout_dialog_sign.xml
+++ b/app/src/main/res/layout/layout_dialog_sign.xml
@@ -58,6 +58,7 @@
             android:paddingRight="@dimen/dp_32"
             android:paddingTop="@dimen/dp_8"
             android:text="确认"
+            android:textColor="@color/colorWhite"
             android:textSize="@dimen/sp_20" />
 
         <TextView
@@ -74,6 +75,7 @@
             android:paddingRight="@dimen/dp_32"
             android:paddingTop="@dimen/dp_8"
             android:text="取消"
+            android:textColor="@color/colorWhite"
             android:textSize="@dimen/sp_20" />
 
     </LinearLayout>
