--- a/app/src/main/res/layout/layout_map.xml
+++ b/app/src/main/res/layout/layout_map.xml
@@ -10,6 +10,7 @@
         android:clickable="true"/>
 
     <TextView
+        android:id="@+id/tv_layout_map_address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorAlphaBlue"
