--- a/app/src/main/res/layout/view_map_info_window.xml
+++ b/app/src/main/res/layout/view_map_info_window.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/bg_map_control">
+    android:background="@drawable/bg_map_info_window">
 
     <TextView
         android:layout_width="match_parent"
