实现MineFragment，以及一些图片

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
 
     <!--原有色彩-->
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorGrayWhite">#eeeeee</color>
     <color name="colorBlack">#000000</color>
     <color name="colorGrayBlack">#222222</color>
     <color name="colorLoginGray">#656b81</color>
