--- a/app/src/main/res/layout/activity_locate.xml
+++ b/app/src/main/res/layout/activity_locate.xml
@@ -36,13 +36,13 @@
 
         <ImageView
             android:id="@+id/iv_activity_locate_imei"
-            android:layout_width="@dimen/dp_48"
+            android:layout_width="@dimen/dp_32"
             android:layout_height="@dimen/dp_48"
             android:layout_marginEnd="@dimen/dp_16"
             android:layout_marginLeft="@dimen/dp_4"
             android:layout_marginRight="@dimen/dp_16"
             android:layout_marginStart="@dimen/dp_4"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@drawable/ic_scanner" />
 
     </LinearLayout>
 
