--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -16,16 +16,19 @@
         android:fitsSystemWindows="true"
         android:orientation="horizontal">
 
+
         <ImageView
             android:id="@+id/iv_activity_base_left"
-            android:layout_width="@dimen/dp_48"
-            android:layout_height="@dimen/dp_48"
+            android:layout_width="@dimen/dp_24"
+            android:layout_height="@dimen/dp_24"
+            android:layout_marginLeft="@dimen/dp_8"
+            android:layout_marginStart="@dimen/dp_8"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginBottom="@dimen/dp_4"
             android:padding="@dimen/dp_2"
-            android:src="@color/colorAccent" />
+            android:src="@drawable/ic_back" />
 
         <ImageView
             android:id="@+id/iv_activity_base_right"
