--- a/app/src/main/res/layout/layout_map_contral.xml
+++ b/app/src/main/res/layout/layout_map_contral.xml
@@ -45,11 +45,12 @@
 
     <ImageView
         android:id="@+id/iv_layout_map_control_locate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/dp_40"
+        android:layout_height="@dimen/dp_40"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:visibility="gone"
         android:layout_marginBottom="@dimen/dp_8"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@drawable/ic_locate" />
 </RelativeLayout>
