--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -7,59 +7,61 @@
     android:orientation="vertical"
     tools:context="com.tianyigps.xiepeng.base.BaseActivity">
 
-    <RelativeLayout
-        android:id="@+id/fl_activity_base_title"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_72"
-        android:background="@color/material_light_blue_a700"
-        android:clipToPadding="true"
-        android:fitsSystemWindows="true"
-        android:orientation="horizontal">
+    <!--<RelativeLayout-->
+        <!--android:id="@+id/fl_activity_base_title"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="@dimen/dp_72"-->
+        <!--android:background="@color/material_light_blue_a700"-->
+        <!--android:clipToPadding="true"-->
+        <!--android:fitsSystemWindows="true"-->
+        <!--android:orientation="horizontal">-->
 
 
-        <ImageView
-            android:id="@+id/iv_activity_base_left"
-            android:layout_width="@dimen/dp_24"
-            android:layout_height="@dimen/dp_24"
-            android:layout_marginLeft="@dimen/dp_8"
-            android:layout_marginStart="@dimen/dp_8"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginBottom="@dimen/dp_4"
-            android:padding="@dimen/dp_2"
-            android:src="@drawable/ic_back" />
+        <!--<ImageView-->
+            <!--android:id="@+id/iv_activity_base_left"-->
+            <!--android:layout_width="@dimen/dp_24"-->
+            <!--android:layout_height="@dimen/dp_24"-->
+            <!--android:layout_marginLeft="@dimen/dp_8"-->
+            <!--android:layout_marginStart="@dimen/dp_8"-->
+            <!--android:layout_alignParentBottom="true"-->
+            <!--android:layout_alignParentLeft="true"-->
+            <!--android:layout_alignParentStart="true"-->
+            <!--android:layout_marginBottom="@dimen/dp_4"-->
+            <!--android:padding="@dimen/dp_2"-->
+            <!--android:src="@drawable/ic_back" />-->
 
-        <ImageView
-            android:id="@+id/iv_activity_base_right"
-            android:layout_width="@dimen/dp_48"
-            android:layout_height="@dimen/dp_48"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginBottom="@dimen/dp_4"
-            android:baselineAlignBottom="true"
-            android:padding="@dimen/dp_2"
-            android:src="@color/colorAccent"
-            android:visibility="gone" />
+        <!--<ImageView-->
+            <!--android:id="@+id/iv_activity_base_right"-->
+            <!--android:layout_width="@dimen/dp_48"-->
+            <!--android:layout_height="@dimen/dp_48"-->
+            <!--android:layout_alignParentBottom="true"-->
+            <!--android:layout_alignParentEnd="true"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_marginBottom="@dimen/dp_4"-->
+            <!--android:baselineAlignBottom="true"-->
+            <!--android:padding="@dimen/dp_2"-->
+            <!--android:src="@color/colorAccent"-->
+            <!--android:visibility="gone" />-->
 
-        <TextView
-            android:id="@+id/tv_activity_base_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="11dp"
-            android:text="@string/app_name"
-            android:textColor="@color/colorWhite"
-            android:textSize="@dimen/sp_18" />
+        <!--<TextView-->
+            <!--android:id="@+id/tv_activity_base_title"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentBottom="true"-->
+            <!--android:layout_centerHorizontal="true"-->
+            <!--android:layout_marginBottom="11dp"-->
+            <!--android:text="@string/app_name"-->
+            <!--android:textColor="@color/colorWhite"-->
+            <!--android:textSize="@dimen/sp_18" />-->
 
-    </RelativeLayout>
+    <!--</RelativeLayout>-->
+
+    <include layout="@layout/layout_title_base"/>
 
     <FrameLayout
         android:id="@+id/fl_activity_base_content"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"></FrameLayout>
+        android:layout_weight="1"/>
 
 </LinearLayout>
