--- a/app/src/main/res/layout/fragment_pending.xml
+++ b/app/src/main/res/layout/fragment_pending.xml
@@ -19,7 +19,9 @@
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/dp_24"
             android:orientation="vertical"
-            android:padding="@dimen/dp_8">
+            android:paddingLeft="@dimen/dp_8"
+            android:paddingRight="@dimen/dp_8"
+            android:paddingTop="@dimen/dp_8">
 
             <include
                 layout="@layout/layout_search"
@@ -31,11 +33,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="@dimen/dp_8"
-                android:scrollbars="none"
                 android:divider="@color/colorNull"
                 android:dividerHeight="@dimen/dp_8"
-                >
-            </ListView>
+                android:scrollbars="none"/>
 
         </LinearLayout>
 
