--- a/app/src/main/res/layout/fragment_worker_order.xml
+++ b/app/src/main/res/layout/fragment_worker_order.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <include
-        layout="@layout/layout_title_worker"
+        layout="@layout/layout_title_base"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -19,7 +19,9 @@
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/dp_24"
             android:orientation="vertical"
-            android:padding="@dimen/dp_8">
+            android:paddingTop="@dimen/dp_8"
+            android:paddingLeft="@dimen/dp_8"
+            android:paddingRight="@dimen/dp_8">
 
             <include
                 layout="@layout/layout_search"
