--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -31,8 +31,8 @@
         android:background="@color/colorWhite"
         android:gravity="center"
         android:text="退出登陆"
-        android:textColor="@color/colorBlue"
-        android:textSize="@dimen/sp_18" />
+        android:textColor="@color/colorBlueTheme"
+        android:textSize="@dimen/sp_16" />
 
     <View
         android:layout_width="match_parent"
