--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,10 +19,13 @@
 
     <dimen name="dp_96">96dp</dimen>
 
+    <dimen name="dp_120">120dp</dimen>
+
     <dimen name="dp_240">240dp</dimen>
 
 
     <!--字体-->
+    <dimen name="sp_14">14sp</dimen>
     <dimen name="sp_16">16sp</dimen>
     <dimen name="sp_18">18sp</dimen>
     <dimen name="sp_20">20sp</dimen>
