--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -3,242 +3,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/dp_8"
+    android:background="@color/colorBlueTheme"
     tools:context="com.tianyigps.xiepeng.activity.OrderDetailsActivity">
 
-    <ScrollView
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="none">
+        android:layout_height="@dimen/dp_160"
+        android:scaleType="fitXY"
+        android:src="@drawable/bg_order_details_top" />
 
-        <RelativeLayout
-            android:id="@+id/activity_order_details"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/dp_8">
+    <include layout="@layout/layout_title_base" />
 
-            <ImageView
-                android:id="@+id/iv_activity_order_details_name"
-                android:layout_width="@dimen/dp_48"
-                android:layout_height="@dimen/dp_48"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/tv_activity_order_details_order"
-                android:layout_marginTop="@dimen/dp_8"
-                android:src="@mipmap/ic_launcher" />
+    <include
+        layout="@layout/layout_order_details_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/dp_16"
+        android:layout_marginLeft="@dimen/dp_16"
+        android:layout_marginRight="@dimen/dp_16"
+        android:layout_marginTop="120dp" />
 
-            <TextView
-                android:id="@+id/tv_activity_order_details_name"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/dp_48"
-                android:layout_below="@+id/tv_activity_order_details_order"
-                android:layout_marginLeft="@dimen/dp_2"
-                android:layout_marginRight="@dimen/dp_2"
-                android:layout_marginTop="@dimen/dp_8"
-                android:layout_toEndOf="@+id/iv_activity_order_details_name"
-                android:layout_toRightOf="@+id/iv_activity_order_details_name"
-                android:gravity="center"
-                android:lines="1"
-                android:text="TextView" />
-
-            <ImageView
-                android:id="@+id/iv_activity_order_details_call"
-                android:layout_width="@dimen/dp_48"
-                android:layout_height="@dimen/dp_48"
-                android:layout_below="@+id/tv_activity_order_details_order"
-                android:layout_marginTop="@dimen/dp_8"
-                android:layout_toEndOf="@+id/tv_activity_order_details_name"
-                android:layout_toRightOf="@+id/tv_activity_order_details_name"
-                android:src="@mipmap/ic_launcher" />
-
-            <ImageView
-                android:id="@+id/iv_activity_order_details_locate"
-                android:layout_width="@dimen/dp_48"
-                android:layout_height="@dimen/dp_48"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/iv_activity_order_details_name"
-                android:layout_marginTop="@dimen/dp_8"
-                android:src="@mipmap/ic_launcher" />
-
-            <TextView
-                android:id="@+id/tv_activity_order_details_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/iv_activity_order_details_locate"
-                android:layout_toEndOf="@+id/iv_activity_order_details_locate"
-                android:layout_toRightOf="@+id/iv_activity_order_details_locate"
-                android:lines="1"
-                android:text="TextView" />
-
-            <TextView
-                android:id="@+id/tv_activity_order_details_address"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/iv_activity_order_details_locate"
-                android:layout_toEndOf="@+id/iv_activity_order_details_locate"
-                android:layout_toRightOf="@+id/iv_activity_order_details_locate"
-                android:lines="1"
-                android:text="TextView" />
-
-            <ImageView
-                android:id="@+id/iv_activity_order_details_setting"
-                android:layout_width="@dimen/dp_48"
-                android:layout_height="@dimen/dp_48"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/iv_activity_order_details_locate"
-                android:layout_marginTop="@dimen/dp_8"
-                android:src="@mipmap/ic_launcher" />
-
-            <TextView
-                android:id="@+id/tv_activity_order_details_order_type"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/iv_activity_order_details_setting"
-                android:layout_toEndOf="@+id/iv_activity_order_details_setting"
-                android:layout_toRightOf="@+id/iv_activity_order_details_setting"
-                android:text="TextView" />
-
-            <TextView
-                android:id="@+id/tv_activity_order_details_setting_content"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/iv_activity_order_details_setting"
-                android:layout_toEndOf="@+id/iv_activity_order_details_setting"
-                android:layout_toRightOf="@+id/iv_activity_order_details_setting"
-                android:text="TextView" />
-
-            <TextView
-                android:id="@+id/tv_activity_order_details_order_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignTop="@+id/tv_activity_order_details_time"
-                android:text="TextView"
-                android:textColor="@color/textbluecolor"
-                android:textSize="@dimen/sp_18" />
-
-            <View
-                android:id="@+id/view_time"
-                android:layout_width="@dimen/dp_64"
-                android:layout_height="@dimen/dp_64"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:background="@color/colorAccent" />
-
-            <TextView
-                android:id="@+id/tv_activity_order_details_order"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/view_time"
-                android:layout_marginTop="@dimen/dp_8"
-                android:lines="1"
-                android:text="@string/app_name"
-                android:textColor="@color/colorGrayBlack"
-                android:textSize="@dimen/sp_20" />
-
-            <View
-                android:id="@+id/line_activity_order_details_1"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_1"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/iv_activity_order_details_setting"
-                android:layout_marginTop="@dimen/dp_8"
-                android:background="@color/color_cut_line" />
-
-            <ImageView
-                android:id="@+id/iv_activity_order_details_info"
-                android:layout_width="@dimen/dp_48"
-                android:layout_height="@dimen/dp_48"
-                android:layout_below="@+id/line_activity_order_details_1"
-                android:layout_marginTop="@dimen/dp_8"
-                android:src="@mipmap/ic_launcher" />
-
-            <TextView
-                android:id="@+id/tv_activity_order_details_info_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/tv_activity_order_details_name"
-                android:layout_alignStart="@+id/tv_activity_order_details_name"
-                android:layout_alignTop="@+id/iv_activity_order_details_info"
-                android:text="@string/app_name"
-                android:textSize="@dimen/sp_20" />
-
-            <TextView
-                android:id="@+id/tv_activity_order_details_info_content"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/iv_activity_order_details_info"
-                android:layout_toEndOf="@+id/iv_activity_order_details_info"
-                android:layout_toRightOf="@+id/iv_activity_order_details_info"
-                android:text="Textview\nlkja;sdklf\nsadf\n\nkasdf\nafdsf" />
-
-            <View
-                android:id="@+id/line_activity_order_details_2"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_1"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/tv_activity_order_details_info_content"
-                android:layout_marginTop="@dimen/dp_8"
-                android:background="@color/color_cut_line" />
-
-            <ImageView
-                android:id="@+id/iv_activity_order_details_remarks"
-                android:layout_width="@dimen/dp_48"
-                android:layout_height="@dimen/dp_48"
-                android:layout_below="@+id/line_activity_order_details_2"
-                android:layout_marginTop="@dimen/dp_8"
-                android:src="@mipmap/ic_launcher" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/iv_activity_order_details_remarks"
-                android:layout_toEndOf="@+id/iv_activity_order_details_remarks"
-                android:layout_toRightOf="@+id/iv_activity_order_details_remarks"
-                android:text="@string/app_name"
-                android:textSize="@dimen/sp_20" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/iv_activity_order_details_remarks"
-                android:layout_toEndOf="@+id/iv_activity_order_details_remarks"
-                android:layout_toRightOf="@+id/iv_activity_order_details_remarks"
-                android:text="Textview" />
-
-            <View
-                android:id="@+id/line_activity_order_details_3"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_1"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/iv_activity_order_details_remarks"
-                android:layout_marginTop="@dimen/dp_8"
-                android:background="@color/color_cut_line" />
-
-            <Button
-                android:id="@+id/btn_activity_order_details_sign"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/line_activity_order_details_3"
-                android:layout_centerHorizontal="true"
-                android:layout_marginLeft="@dimen/dp_24"
-                android:layout_marginRight="@dimen/dp_24"
-                android:layout_marginTop="@dimen/dp_8"
-                android:background="@color/textbluecolor"
-                android:gravity="center"
-                android:text="@string/sign"
-                android:textColor="@color/colorWhite"
-                android:textSize="@dimen/sp_20" />
-        </RelativeLayout>
-
-    </ScrollView>
+    <ImageView
+        android:layout_width="@dimen/dp_64"
+        android:layout_height="@dimen/dp_64"
+        android:layout_marginTop="96dp"
+        android:layout_gravity="center_horizontal"
+        android:background="@color/colorAccent"
+        android:elevation="@dimen/dp_16"/>
 
 </FrameLayout>
