--- a/app/src/main/res/layout/layout_top_toast.xml
+++ b/app/src/main/res/layout/layout_top_toast.xml
@@ -3,14 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
-    android:paddingTop="@dimen/dp_16"
+    android:orientation="horizontal"
     android:paddingBottom="@dimen/dp_16"
-    android:orientation="horizontal">
+    android:paddingTop="@dimen/dp_16">
 
     <ImageView
         android:layout_width="@dimen/dp_24"
         android:layout_height="@dimen/dp_24"
-        android:src="@drawable/ic_information"/>
+        android:src="@drawable/ic_information" />
 
     <TextView
         android:id="@+id/tv_layout_top_toast"
@@ -18,6 +18,6 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/dp_4"
         android:layout_marginStart="@dimen/dp_4"
-        android:textSize="@dimen/sp_16"
-        android:text="@string/app_name"/>
+        android:text="@string/app_name"
+        android:textSize="@dimen/sp_16" />
 </LinearLayout>
