--- a/app/src/main/res/layout/layout_order_details_content.xml
+++ b/app/src/main/res/layout/layout_order_details_content.xml
@@ -260,6 +260,7 @@
                 android:text="@string/sign" />
 
             <TextView
+                android:id="@+id/tv_layout_order_details_return_order"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
