--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="colorGrayWhite">#eeeeee</color>
     <color name="colorBlack">#000000</color>
     <color name="colorGrayBlack">#222222</color>
+    <color name="colorCycleGray">#c9c9c9</color>
     <color name="colorLoginGray">#656b81</color>
     <color name="colorText">#656b81</color>
     <color name="colorTextSelect">#3cabfa</color>
@@ -18,6 +19,7 @@
     <color name="colorBlue">#017CFC</color>
     <color name="colorBlueTheme">#3cabfa</color>
     <color name="colorRed">#E72020</color>
+    <color name="colorOrange">#ffa800</color>
 
     <color name="colorNull">#00000000</color>
 
