--- a/app/src/main/res/layout/activity_operate_install.xml
+++ b/app/src/main/res/layout/activity_operate_install.xml
@@ -5,6 +5,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.tianyigps.xiepeng.activity.InstallingAcvitity">
+    tools:context="com.tianyigps.xiepeng.activity.OperateInstallActivity">
 
 </android.support.constraint.ConstraintLayout>
