--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,7 @@
     <color name="colorLine">#c9c9c9</color>
     <color name="colorBlue">#017CFC</color>
     <color name="colorBlueTheme">#3cabfa</color>
+    <color name="colorBlueDis">#80d8ff</color>
     <color name="colorRed">#E72020</color>
     <color name="colorOrange">#ffa800</color>
 
