--- a/app/src/main/res/layout/activity_locate.xml
+++ b/app/src/main/res/layout/activity_locate.xml
@@ -51,12 +51,12 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="@dimen/dp_8"
         android:layout_marginTop="@dimen/dp_8"
-        android:background="@color/material_light_blue_a700"
+        android:background="@drawable/bg_button"
         android:paddingBottom="@dimen/dp_8"
         android:paddingLeft="@dimen/dp_96"
         android:paddingRight="@dimen/dp_96"
         android:paddingTop="@dimen/dp_8"
-        android:text="TextView"
+        android:text="@string/look_location"
         android:textColor="@color/colorWhite"
         android:textSize="@dimen/sp_18"/>
 
