实现订单详情

--- a/app/src/main/res/layout/activity_modify_password.xml
+++ b/app/src/main/res/layout/activity_modify_password.xml
@@ -110,7 +110,7 @@
         android:layout_marginLeft="@dimen/dp_8"
         android:layout_marginRight="@dimen/dp_8"
         android:layout_marginTop="@dimen/dp_48"
-        android:background="@color/colorBlueTheme"
+        android:background="@drawable/bg_button"
         android:text="@string/ensure"
         android:textColor="@color/colorWhite"
         android:textSize="@dimen/sp_18" />
