--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -46,6 +46,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/tv_activity_order_details_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="09:35"
